--- a/cwweb/src/dbconfig.properties
+++ b/cwweb/src/dbconfig.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/clothing_wholesale
+jdbc.url=jdbc:mysql://127.0.0.1:3306/clothing_wholesale?autoReconnect=true&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
